Vulkan: Cycles: Blender crash #128608

Closed
opened 2024-10-04 21:03:46 +02:00 by Donovane · 3 comments

System Information
Operating system: Win 11
Graphics card: Rtx 4070
Nvidia Driver Version : Game ready --> 565.90 (Released on 10.01.2024)

Blender Version
Blender version : 4.3 BETA & 4.4 Alpha
Broken: hash 9e70c6de4e (Ver 4.3) & 3f8f5fd998 (ver 4.4)
Worked: 4.2 as it did not expose Vulkan

Short description of error

Blender crash when you switch to render view in cycles and try to move in the viewport

Exact steps for others to reproduce the error

Switch to Vulakn Backend
Restart Blender
Go to render View
Boom blender crash.


But i find a method to bypass the problem !
Put you render in eevee or Workbenche
Go to Viewport Shading
And switch the engine to Cycles, now he working but he giving a lot colored lines or white lines !

**System Information** Operating system: Win 11 Graphics card: Rtx 4070 Nvidia Driver Version : Game ready --> 565.90 (Released on 10.01.2024) **Blender Version** Blender version : 4.3 BETA & 4.4 Alpha Broken: hash 9e70c6de4e02 (Ver 4.3) & 3f8f5fd99841 (ver 4.4) Worked: 4.2 as it did not expose Vulkan **Short description of error** >Blender crash when you switch to render view in cycles and try to move in the viewport **Exact steps for others to reproduce the error** >Switch to Vulakn Backend >Restart Blender >Go to render View >Boom blender crash. ---- But i find a method to bypass the problem ! Put you render in eevee or Workbenche Go to Viewport Shading And switch the engine to Cycles, now he working but he giving a lot colored lines or white lines ! <video src="/attachments/71b8eda3-4a3e-47ad-b755-4ac2029b0742" title="2024-10-04 21-02-42.mkv" controls></video>
Donovane added the
Severity
Normal
Status
Needs Triage
Type
Bug
labels 2024-10-04 21:03:46 +02:00
Donovane changed title from Vulkan: Cycles : Blender crash to Vulkan: Cycles: Blender crash 2024-10-04 21:03:57 +02:00
Author
CC @Jeroen-Bakker
Member

I can confirm the crash. Crash logs point to a issue with the NVIDIA GPU driver.

I'm not sure if this should be kept as a seperate issue, or be merged as part of #128586.

I'll leave that to Jeroen to decide.

# Blender 4.3.0, Commit date: 2024-10-07 02:00, Hash 6039cb17e63e
bpy.context.space_data.context = 'RENDER'  # Property
bpy.context.scene.render.engine = 'CYCLES'  # Property
bpy.context.scene.cycles.device = 'GPU'  # Property
bpy.context.space_data.shading.type = 'RENDERED'  # Property

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FFFF14FAD17
Exception Module      : nvoglv64.dll
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x0000000000000048


Stack trace:
nvoglv64.dll        :  vkGetInstanceProcAddr
nvoglv64.dll        :  vkGetInstanceProcAddr
nvoglv64.dll        :  vkEnumerateInstanceLayerProperties
vulkan-1.dll        :  vkCmdCopyBufferToImage
blender.exe         :  blender::gpu::render_graph::VKRenderGraphNode::build_commands D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_render_graph_node.hh:222
blender.exe         :  blender::gpu::render_graph::VKCommandBuilder::build_node_group D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_command_builder.cc:149
blender.exe         :  blender::gpu::render_graph::VKCommandBuilder::build_nodes D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_command_builder.cc:76
blender.exe         :  blender::gpu::render_graph::VKRenderGraph::submit_for_present D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_render_graph.cc:60
blender.exe         :  blender::gpu::VKContext::swap_buffers_pre_callback D:\blender-git\blender\source\blender\gpu\vulkan\vk_context.cc:300
blender.exe         :  GHOST_ContextVK::swapBuffers D:\blender-git\blender\intern\ghost\intern\GHOST_ContextVK.cc:567
blender.exe         :  wm_draw_update D:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.cc:1556
blender.exe         :  WM_main D:\blender-git\blender\source\blender\windowmanager\intern\wm.cc:644
blender.exe         :  main D:\blender-git\blender\source\creator\creator.cc:591
blender.exe         :  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :  BaseThreadInitThunk
ntdll.dll           :  RtlUserThreadStart
I can confirm the crash. Crash logs point to a issue with the NVIDIA GPU driver. I'm not sure if this should be kept as a seperate issue, or be merged as part of #128586. I'll leave that to Jeroen to decide. ``` # Blender 4.3.0, Commit date: 2024-10-07 02:00, Hash 6039cb17e63e bpy.context.space_data.context = 'RENDER' # Property bpy.context.scene.render.engine = 'CYCLES' # Property bpy.context.scene.cycles.device = 'GPU' # Property bpy.context.space_data.shading.type = 'RENDERED' # Property # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FFFF14FAD17 Exception Module : nvoglv64.dll Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x0000000000000048 Stack trace: nvoglv64.dll : vkGetInstanceProcAddr nvoglv64.dll : vkGetInstanceProcAddr nvoglv64.dll : vkEnumerateInstanceLayerProperties vulkan-1.dll : vkCmdCopyBufferToImage blender.exe : blender::gpu::render_graph::VKRenderGraphNode::build_commands D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_render_graph_node.hh:222 blender.exe : blender::gpu::render_graph::VKCommandBuilder::build_node_group D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_command_builder.cc:149 blender.exe : blender::gpu::render_graph::VKCommandBuilder::build_nodes D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_command_builder.cc:76 blender.exe : blender::gpu::render_graph::VKRenderGraph::submit_for_present D:\blender-git\blender\source\blender\gpu\vulkan\render_graph\vk_render_graph.cc:60 blender.exe : blender::gpu::VKContext::swap_buffers_pre_callback D:\blender-git\blender\source\blender\gpu\vulkan\vk_context.cc:300 blender.exe : GHOST_ContextVK::swapBuffers D:\blender-git\blender\intern\ghost\intern\GHOST_ContextVK.cc:567 blender.exe : wm_draw_update D:\blender-git\blender\source\blender\windowmanager\intern\wm_draw.cc:1556 blender.exe : WM_main D:\blender-git\blender\source\blender\windowmanager\intern\wm.cc:644 blender.exe : main D:\blender-git\blender\source\creator\creator.cc:591 blender.exe : __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL : BaseThreadInitThunk ntdll.dll : RtlUserThreadStart ```
Member
node_group: 243-243, node_handle: 243, node_type: COPY_BUFFER_TO_IMAGE
NODE:
  type:COPY_BUFFER_TO_IMAGE
 inputs:
  handle=553, type=IMAGE, vk_handle=140735488805712, name=invalid_tex, vk_access=VK_ACCESS_TRANSFER_READ_BIT, vk_image_layout=VK_IMAGE_LAYOUT_UNDEFINED, vk_image_aspect=, layer_base=0
 outputs:
  handle=30, type=IMAGE, vk_handle=140734175372368, name=CyclesBlitTexture, vk_access=VK_ACCESS_TRANSFER_WRITE_BIT, vk_image_layout=VK_IMAGE_LAYOUT_TRANSFER_DST_OPTIMAL, vk_image_aspect=VK_IMAGE_ASPECT_COLOR_BIT, layer_base=0

Seems like it tries to use an image as a buffer. Will dive deeper where this comes from.

``` node_group: 243-243, node_handle: 243, node_type: COPY_BUFFER_TO_IMAGE NODE: type:COPY_BUFFER_TO_IMAGE inputs: handle=553, type=IMAGE, vk_handle=140735488805712, name=invalid_tex, vk_access=VK_ACCESS_TRANSFER_READ_BIT, vk_image_layout=VK_IMAGE_LAYOUT_UNDEFINED, vk_image_aspect=, layer_base=0 outputs: handle=30, type=IMAGE, vk_handle=140734175372368, name=CyclesBlitTexture, vk_access=VK_ACCESS_TRANSFER_WRITE_BIT, vk_image_layout=VK_IMAGE_LAYOUT_TRANSFER_DST_OPTIMAL, vk_image_aspect=VK_IMAGE_ASPECT_COLOR_BIT, layer_base=0 ``` Seems like it tries to use an image as a buffer. Will dive deeper where this comes from.
Jeroen Bakker added this to the Viewport & EEVEE project 2024-10-11 11:59:07 +02:00
Jeroen Bakker self-assigned this 2024-10-11 11:59:10 +02:00
Jeroen Bakker added this to the 4.3 milestone 2024-10-11 15:08:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-14 15:45:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128608
No description provided.