WIP: Fix #128608: Crash when using Cycles+Vulkan