source/blender/gpu/vulkan/vk_fence.hh
@@ -10,9 +10,17 @@
 
 #include "gpu_state_private.hh"
 
+#include "vk_common.hh"
+
 namespace blender::gpu {
 
 class VKFence : public Fence {
+ private:
+  VkFence vk_fence_ = VK_NULL_HANDLE;
+
+ protected:
+  virtual ~VKFence();
+
  public:
   void signal() override;
   void wait() override;
